Stop overflow of alt tag with missing images

--- a/src/components/CloudAppsList/index.less
+++ b/src/components/CloudAppsList/index.less
@@ -33,6 +33,7 @@
   width: 48px;
   height: 48px;
   padding: 4px 0;
+  overflow: hidden;
 }
 
 .mediaFigureImg {
